java version and beans added for testing evaluation